--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# --------------------------------- BACK END --------------------------------------------------------
+ 
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +129,25 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/**/*._DS_Store
+
+#--------------------------------------- IDLE ------------------------------------------------
+.idea
+idea/
+/idea
+
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### Backup ###
+*.bak
+*.gho
+*.ori
+*.orig
+*.tmp
+
+# Allowed Exceptions
+!requirements.txt
