--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# --------------------------------- BACK END --------------------------------------------------------
+# --------------------------------- BACK-END APP --------------------------------------------------------
  
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -130,6 +130,25 @@ dmypy.json
 # Pyre type checker
 .pyre/
 /**/*._DS_Store
+
+# --------------------------------- FRONT-END APP --------------------------------------------------------
+
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
+node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
+
 
 #--------------------------------------- IDLE ------------------------------------------------
 .idea
